--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -15,8 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "e844f3b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/raw/credit_risk_dataset.csv\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "90357334",
    "metadata": {},
    "outputs": [
     {
@@ -130,21 +142,84 @@
        "      <td>Y</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "0          22          59000                  RENT              123.0   \n",
+       "1          21           9600                   OWN                5.0   \n",
+       "2          25           9600              MORTGAGE                1.0   \n",
+       "3          23          65500                  RENT                4.0   \n",
+       "4          24          54400                  RENT                8.0   \n",
+       "\n",
+       "  loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "0    PERSONAL          D      35000          16.02            1   \n",
+       "1   EDUCATION          B       1000          11.14            0   \n",
+       "2     MEDICAL          C       5500          12.87            1   \n",
+       "3     MEDICAL          C      35000          15.23            1   \n",
+       "4     MEDICAL          C      35000          14.27            1   \n",
+       "\n",
+       "   loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length  \n",
+       "0                 0.59                         Y                           3  \n",
+       "1                 0.10                         N                           2  \n",
+       "2                 0.57                         N                           3  \n",
+       "3                 0.53                         N                           2  \n",
+       "4                 0.55                         Y                           4  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9e282815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
        "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
        "      <th>32576</th>\n",
        "      <td>57</td>\n",
@@ -222,17 +297,10 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32581 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       person_age  person_income person_home_ownership  person_emp_length  \\\n",
-       "0              22          59000                  RENT              123.0   \n",
-       "1              21           9600                   OWN                5.0   \n",
-       "2              25           9600              MORTGAGE                1.0   \n",
-       "3              23          65500                  RENT                4.0   \n",
-       "4              24          54400                  RENT                8.0   \n",
-       "...           ...            ...                   ...                ...   \n",
        "32576          57          53000              MORTGAGE                1.0   \n",
        "32577          54         120000              MORTGAGE                4.0   \n",
        "32578          65          76000                  RENT                3.0   \n",
@@ -240,12 +308,6 @@
        "32580          66          42000                  RENT                2.0   \n",
        "\n",
        "           loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
-       "0             PERSONAL          D      35000          16.02            1   \n",
-       "1            EDUCATION          B       1000          11.14            0   \n",
-       "2              MEDICAL          C       5500          12.87            1   \n",
-       "3              MEDICAL          C      35000          15.23            1   \n",
-       "4              MEDICAL          C      35000          14.27            1   \n",
-       "...                ...        ...        ...            ...          ...   \n",
        "32576         PERSONAL          C       5800          13.16            0   \n",
        "32577         PERSONAL          A      17625           7.49            0   \n",
        "32578  HOMEIMPROVEMENT          B      35000          10.99            1   \n",
@@ -253,12 +315,6 @@
        "32580          MEDICAL          B       6475           9.99            0   \n",
        "\n",
        "       loan_percent_income cb_person_default_on_file  \\\n",
-       "0                     0.59                         Y   \n",
-       "1                     0.10                         N   \n",
-       "2                     0.57                         N   \n",
-       "3                     0.53                         N   \n",
-       "4                     0.55                         Y   \n",
-       "...                    ...                       ...   \n",
        "32576                 0.11                         N   \n",
        "32577                 0.15                         N   \n",
        "32578                 0.46                         N   \n",
@@ -266,37 +322,176 @@
        "32580                 0.15                         N   \n",
        "\n",
        "       cb_person_cred_hist_length  \n",
-       "0                               3  \n",
-       "1                               2  \n",
-       "2                               3  \n",
-       "3                               2  \n",
-       "4                               4  \n",
-       "...                           ...  \n",
        "32576                          30  \n",
        "32577                          19  \n",
        "32578                          28  \n",
        "32579                          26  \n",
-       "32580                          30  \n",
-       "\n",
-       "[32581 rows x 12 columns]"
+       "32580                          30  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "credit_risk_dataset = pd.read_csv(\n",
-    "    filepath_or_buffer = \"../data/raw/credit_risk_dataset.csv\"\n",
-    "    )\n",
-    "credit_risk_dataset"
+    "credit_risk_dataset.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "43c1a716",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32581, 12)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5f10c8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32581 entries, 0 to 32580\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   person_age                  32581 non-null  int64  \n",
+      " 1   person_income               32581 non-null  int64  \n",
+      " 2   person_home_ownership       32581 non-null  object \n",
+      " 3   person_emp_length           31686 non-null  float64\n",
+      " 4   loan_intent                 32581 non-null  object \n",
+      " 5   loan_grade                  32581 non-null  object \n",
+      " 6   loan_amnt                   32581 non-null  int64  \n",
+      " 7   loan_int_rate               29465 non-null  float64\n",
+      " 8   loan_status                 32581 non-null  int64  \n",
+      " 9   loan_percent_income         32581 non-null  float64\n",
+      " 10  cb_person_default_on_file   32581 non-null  object \n",
+      " 11  cb_person_cred_hist_length  32581 non-null  int64  \n",
+      "dtypes: float64(3), int64(5), object(4)\n",
+      "memory usage: 3.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2e0525c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['person_age', 'person_income', 'person_home_ownership',\n",
+       "       'person_emp_length', 'loan_intent', 'loan_grade', 'loan_amnt',\n",
+       "       'loan_int_rate', 'loan_status', 'loan_percent_income',\n",
+       "       'cb_person_default_on_file', 'cb_person_cred_hist_length'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "297889b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=32581, step=1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f0ad2d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RangeIndex(start=0, stop=32581, step=1),\n",
+       " Index(['person_age', 'person_income', 'person_home_ownership',\n",
+       "        'person_emp_length', 'loan_intent', 'loan_grade', 'loan_amnt',\n",
+       "        'loan_int_rate', 'loan_status', 'loan_percent_income',\n",
+       "        'cb_person_default_on_file', 'cb_person_cred_hist_length'],\n",
+       "       dtype='object')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9e830552",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "390972"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.size"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90357334",
+   "id": "34f4bdb4",
    "metadata": {},
    "outputs": [],
    "source": []
