loan status is target variable

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f0ad2d1a",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9e830552",
    "metadata": {},
    "outputs": [
@@ -490,8 +490,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "34f4bdb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "1        0\n",
+       "2        1\n",
+       "3        1\n",
+       "4        1\n",
+       "        ..\n",
+       "32576    0\n",
+       "32577    0\n",
+       "32578    1\n",
+       "32579    0\n",
+       "32580    0\n",
+       "Name: loan_status, Length: 32581, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = credit_risk_dataset.loan_status\n",
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1371863e",
    "metadata": {},
    "outputs": [],
    "source": []
