filtered impossible values out from employment length feature.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c4fcba25",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4b32a81",
+   "metadata": {},
+   "source": [
+    "### Data Validation Initial Inspection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "e844f3b7",
    "metadata": {},
    "outputs": [],
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "90357334",
    "metadata": {},
    "outputs": [
@@ -169,7 +177,7 @@
        "4                 0.55                         Y                           4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9e282815",
    "metadata": {},
    "outputs": [
@@ -329,7 +337,7 @@
        "32580                          30  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "43c1a716",
    "metadata": {},
    "outputs": [
@@ -350,7 +358,7 @@
        "(32581, 12)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "5f10c8b2",
    "metadata": {},
    "outputs": [
@@ -397,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "2e0525c3",
    "metadata": {},
    "outputs": [
@@ -411,7 +419,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "297889b5",
    "metadata": {},
    "outputs": [
@@ -432,7 +440,7 @@
        "RangeIndex(start=0, stop=32581, step=1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f0ad2d1a",
    "metadata": {},
    "outputs": [
@@ -458,7 +466,7 @@
        "       dtype='object')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9e830552",
    "metadata": {},
    "outputs": [
@@ -479,7 +487,7 @@
        "390972"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,41 +498,433 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "34f4bdb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = credit_risk_dataset.loan_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1371863e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>32581.000000</td>\n",
+       "      <td>3.258100e+04</td>\n",
+       "      <td>31686.000000</td>\n",
+       "      <td>32581.000000</td>\n",
+       "      <td>29465.000000</td>\n",
+       "      <td>32581.000000</td>\n",
+       "      <td>32581.000000</td>\n",
+       "      <td>32581.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>27.734600</td>\n",
+       "      <td>6.607485e+04</td>\n",
+       "      <td>4.789686</td>\n",
+       "      <td>9589.371106</td>\n",
+       "      <td>11.011695</td>\n",
+       "      <td>0.218164</td>\n",
+       "      <td>0.170203</td>\n",
+       "      <td>5.804211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.348078</td>\n",
+       "      <td>6.198312e+04</td>\n",
+       "      <td>4.142630</td>\n",
+       "      <td>6322.086646</td>\n",
+       "      <td>3.240459</td>\n",
+       "      <td>0.413006</td>\n",
+       "      <td>0.106782</td>\n",
+       "      <td>4.055001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>4.000000e+03</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>5.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>3.850000e+04</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.090000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>5.500000e+04</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8000.000000</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>7.920000e+04</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>12200.000000</td>\n",
+       "      <td>13.470000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.230000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>144.000000</td>\n",
+       "      <td>6.000000e+06</td>\n",
+       "      <td>123.000000</td>\n",
+       "      <td>35000.000000</td>\n",
+       "      <td>23.220000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.830000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0        1\n",
-       "1        0\n",
-       "2        1\n",
-       "3        1\n",
-       "4        1\n",
-       "        ..\n",
-       "32576    0\n",
-       "32577    0\n",
-       "32578    1\n",
-       "32579    0\n",
-       "32580    0\n",
-       "Name: loan_status, Length: 32581, dtype: int64"
+       "         person_age  person_income  person_emp_length     loan_amnt  \\\n",
+       "count  32581.000000   3.258100e+04       31686.000000  32581.000000   \n",
+       "mean      27.734600   6.607485e+04           4.789686   9589.371106   \n",
+       "std        6.348078   6.198312e+04           4.142630   6322.086646   \n",
+       "min       20.000000   4.000000e+03           0.000000    500.000000   \n",
+       "25%       23.000000   3.850000e+04           2.000000   5000.000000   \n",
+       "50%       26.000000   5.500000e+04           4.000000   8000.000000   \n",
+       "75%       30.000000   7.920000e+04           7.000000  12200.000000   \n",
+       "max      144.000000   6.000000e+06         123.000000  35000.000000   \n",
+       "\n",
+       "       loan_int_rate   loan_status  loan_percent_income  \\\n",
+       "count   29465.000000  32581.000000         32581.000000   \n",
+       "mean       11.011695      0.218164             0.170203   \n",
+       "std         3.240459      0.413006             0.106782   \n",
+       "min         5.420000      0.000000             0.000000   \n",
+       "25%         7.900000      0.000000             0.090000   \n",
+       "50%        10.990000      0.000000             0.150000   \n",
+       "75%        13.470000      0.000000             0.230000   \n",
+       "max        23.220000      1.000000             0.830000   \n",
+       "\n",
+       "       cb_person_cred_hist_length  \n",
+       "count                32581.000000  \n",
+       "mean                     5.804211  \n",
+       "std                      4.055001  \n",
+       "min                      2.000000  \n",
+       "25%                      3.000000  \n",
+       "50%                      4.000000  \n",
+       "75%                      8.000000  \n",
+       "max                     30.000000  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target = credit_risk_dataset.loan_status\n",
-    "target"
+    "credit_risk_dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f503a3a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>32581</td>\n",
+       "      <td>32581</td>\n",
+       "      <td>32581</td>\n",
+       "      <td>32581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>A</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>16446</td>\n",
+       "      <td>6453</td>\n",
+       "      <td>10777</td>\n",
+       "      <td>26836</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       person_home_ownership loan_intent loan_grade cb_person_default_on_file\n",
+       "count                  32581       32581      32581                     32581\n",
+       "unique                     4           6          7                         2\n",
+       "top                     RENT   EDUCATION          A                         N\n",
+       "freq                   16446        6453      10777                     26836"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.describe(include='O')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fea1626",
+   "metadata": {},
+   "source": [
+    "#### note: Majority of loans are for education from people who rent. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "798d10bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210      123.0\n",
+       "0        123.0\n",
+       "32355     41.0\n",
+       "32515     38.0\n",
+       "32428     34.0\n",
+       "         ...  \n",
+       "32285      NaN\n",
+       "32328      NaN\n",
+       "32360      NaN\n",
+       "32453      NaN\n",
+       "32471      NaN\n",
+       "Name: person_emp_length, Length: 32581, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.person_emp_length.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8c6386d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>D</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>16.02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>21</td>\n",
+       "      <td>192000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>A</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>6.54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "0            22          59000                  RENT              123.0   \n",
+       "210          21         192000              MORTGAGE              123.0   \n",
+       "\n",
+       "    loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "0      PERSONAL          D      35000          16.02            1   \n",
+       "210     VENTURE          A      20000           6.54            0   \n",
+       "\n",
+       "     loan_percent_income cb_person_default_on_file  cb_person_cred_hist_length  \n",
+       "0                   0.59                         Y                           3  \n",
+       "210                 0.10                         N                           4  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.person_emp_length > 41.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3227928e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32579, 12)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset[~(credit_risk_dataset.person_emp_length > 41.0)]\n",
+    "credit_risk_dataset.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1371863e",
+   "id": "fef70a55",
    "metadata": {},
    "outputs": [],
    "source": []
