filtered out impossible values from person age feature.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
   },
@@ -901,30 +901,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "id": "e92c0a86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of dataset before filtering for impossible values from persons employment length: (32581, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"size of dataset before filtering for impossible values from persons employment length:\", credit_risk_dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "3227928e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset[~(credit_risk_dataset.person_emp_length > 41.0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8da86ceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of dataset after filtering impossible values from persons employment length: (32579, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"size of dataset after filtering impossible values from persons employment length:\", credit_risk_dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fef70a55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(32579, 12)"
+       "32297    144\n",
+       "81       144\n",
+       "183      144\n",
+       "575      123\n",
+       "747      123\n",
+       "        ... \n",
+       "9926      20\n",
+       "7748      20\n",
+       "7327      20\n",
+       "5648      20\n",
+       "3851      20\n",
+       "Name: person_age, Length: 32579, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "credit_risk_dataset = credit_risk_dataset[~(credit_risk_dataset.person_emp_length > 41.0)]\n",
-    "credit_risk_dataset.shape"
+    "credit_risk_dataset.person_age.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8d2fc2c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>144</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4800</td>\n",
+       "      <td>13.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>144</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>11.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>575</th>\n",
+       "      <td>123</td>\n",
+       "      <td>80004</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>20400</td>\n",
+       "      <td>10.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>747</th>\n",
+       "      <td>123</td>\n",
+       "      <td>78000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>B</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32297</th>\n",
+       "      <td>144</td>\n",
+       "      <td>6000000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>12.73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>N</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "81            144         250000                  RENT                4.0   \n",
+       "183           144         200000              MORTGAGE                4.0   \n",
+       "575           123          80004                  RENT                2.0   \n",
+       "747           123          78000                  RENT                7.0   \n",
+       "32297         144        6000000              MORTGAGE               12.0   \n",
+       "\n",
+       "      loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "81        VENTURE          C       4800          13.57            0   \n",
+       "183     EDUCATION          B       6000          11.86            0   \n",
+       "575     EDUCATION          B      20400          10.25            0   \n",
+       "747       VENTURE          B      20000            NaN            0   \n",
+       "32297    PERSONAL          C       5000          12.73            0   \n",
+       "\n",
+       "       loan_percent_income cb_person_default_on_file  \\\n",
+       "81                    0.02                         N   \n",
+       "183                   0.03                         N   \n",
+       "575                   0.25                         N   \n",
+       "747                   0.26                         N   \n",
+       "32297                 0.00                         N   \n",
+       "\n",
+       "       cb_person_cred_hist_length  \n",
+       "81                              3  \n",
+       "183                             2  \n",
+       "575                             3  \n",
+       "747                             4  \n",
+       "32297                          25  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.person_age > 94]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b5faf709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of dataset before filtering out impossible age values (32579, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of dataset before filtering out impossible age values\", credit_risk_dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "91b9602d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset[~(credit_risk_dataset.person_age > 94)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cc870942",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of dataset after filtering out impossible age values (32574, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of dataset after filtering out impossible age values\", credit_risk_dataset.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef70a55",
+   "id": "a07bf2a2",
    "metadata": {},
    "outputs": [],
    "source": []
