identified only 2 columns containing NaNs

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1184,9 +1184,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30a73338",
+   "metadata": {},
+   "source": [
+    "### Data Quality Assessment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c70f92df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Column Index\n",
+       "person_age                       0\n",
+       "person_income                    0\n",
+       "person_home_ownership            0\n",
+       "person_emp_length              895\n",
+       "loan_intent                      0\n",
+       "loan_grade                       0\n",
+       "loan_amnt                        0\n",
+       "loan_int_rate                 3115\n",
+       "loan_status                      0\n",
+       "loan_percent_income              0\n",
+       "cb_person_default_on_file        0\n",
+       "cb_person_cred_hist_length       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07bf2a2",
+   "id": "09acf01e",
    "metadata": {},
    "outputs": [],
    "source": []
