--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "e92c0a86",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3227928e",
    "metadata": {},
    "outputs": [],
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8da86ceb",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "fef70a55",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
        "Name: person_age, Length: 32579, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "8d2fc2c0",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
        "32297                          25  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "b5faf709",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "91b9602d",
    "metadata": {},
    "outputs": [],
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "cc870942",
    "metadata": {},
    "outputs": [
@@ -1184,6 +1184,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7c6347f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 32574 entries, 1 to 32580\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   person_age                  32574 non-null  int64  \n",
+      " 1   person_income               32574 non-null  int64  \n",
+      " 2   person_home_ownership       32574 non-null  object \n",
+      " 3   person_emp_length           31679 non-null  float64\n",
+      " 4   loan_intent                 32574 non-null  object \n",
+      " 5   loan_grade                  32574 non-null  object \n",
+      " 6   loan_amnt                   32574 non-null  int64  \n",
+      " 7   loan_int_rate               29459 non-null  float64\n",
+      " 8   loan_status                 32574 non-null  int64  \n",
+      " 9   loan_percent_income         32574 non-null  float64\n",
+      " 10  cb_person_default_on_file   32574 non-null  object \n",
+      " 11  cb_person_cred_hist_length  32574 non-null  int64  \n",
+      "dtypes: float64(3), int64(5), object(4)\n",
+      "memory usage: 3.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b4c85d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_columns = credit_risk_dataset.select_dtypes(include=['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ef91db37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person_home_ownership\n",
+      "RENT        16442\n",
+      "MORTGAGE    13441\n",
+      "OWN          2584\n",
+      "OTHER         107\n",
+      "Name: count, dtype: int64\n",
+      "loan_intent\n",
+      "EDUCATION            6451\n",
+      "MEDICAL              6071\n",
+      "VENTURE              5716\n",
+      "PERSONAL             5519\n",
+      "DEBTCONSOLIDATION    5212\n",
+      "HOMEIMPROVEMENT      3605\n",
+      "Name: count, dtype: int64\n",
+      "loan_grade\n",
+      "A    10776\n",
+      "B    10448\n",
+      "C     6456\n",
+      "D     3625\n",
+      "E      964\n",
+      "F      241\n",
+      "G       64\n",
+      "Name: count, dtype: int64\n",
+      "cb_person_default_on_file\n",
+      "N    26830\n",
+      "Y     5744\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in categorical_columns.columns:\n",
+    "    print(credit_risk_dataset[column].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a7f8f5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "30a73338",
    "metadata": {},
@@ -1193,14 +1292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "c70f92df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Column Index\n",
        "person_age                       0\n",
        "person_income                    0\n",
        "person_home_ownership            0\n",
@@ -1216,7 +1314,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
