--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1185,42 +1185,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7c6347f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 32574 entries, 1 to 32580\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column                      Non-Null Count  Dtype  \n",
-      "---  ------                      --------------  -----  \n",
-      " 0   person_age                  32574 non-null  int64  \n",
-      " 1   person_income               32574 non-null  int64  \n",
-      " 2   person_home_ownership       32574 non-null  object \n",
-      " 3   person_emp_length           31679 non-null  float64\n",
-      " 4   loan_intent                 32574 non-null  object \n",
-      " 5   loan_grade                  32574 non-null  object \n",
-      " 6   loan_amnt                   32574 non-null  int64  \n",
-      " 7   loan_int_rate               29459 non-null  float64\n",
-      " 8   loan_status                 32574 non-null  int64  \n",
-      " 9   loan_percent_income         32574 non-null  float64\n",
-      " 10  cb_person_default_on_file   32574 non-null  object \n",
-      " 11  cb_person_cred_hist_length  32574 non-null  int64  \n",
-      "dtypes: float64(3), int64(5), object(4)\n",
-      "memory usage: 3.2+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "id": "b4c85d0f",
    "metadata": {},
@@ -1276,11 +1240,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9a7f8f5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "0    25467\n",
+       "1     7107\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.loan_status.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1325,8 +1305,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "id": "6ae1b945",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "5        False\n",
+       "         ...  \n",
+       "32576    False\n",
+       "32577    False\n",
+       "32578    False\n",
+       "32579    False\n",
+       "32580    False\n",
+       "Length: 32574, dtype: bool"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "09acf01e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15975</th>\n",
+       "      <td>23</td>\n",
+       "      <td>42000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15989</th>\n",
+       "      <td>23</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>10.36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15995</th>\n",
+       "      <td>24</td>\n",
+       "      <td>48000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16025</th>\n",
+       "      <td>24</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16028</th>\n",
+       "      <td>23</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>A</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>7.88</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32010</th>\n",
+       "      <td>42</td>\n",
+       "      <td>39996</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32047</th>\n",
+       "      <td>36</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>DEBTCONSOLIDATION</td>\n",
+       "      <td>A</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>7.88</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>N</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32172</th>\n",
+       "      <td>49</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>B</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>10.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32259</th>\n",
+       "      <td>39</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>10.37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32279</th>\n",
+       "      <td>43</td>\n",
+       "      <td>11340</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>N</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "15975          23          42000                  RENT                5.0   \n",
+       "15989          23          90000              MORTGAGE                7.0   \n",
+       "15995          24          48000              MORTGAGE                4.0   \n",
+       "16025          24          10000                  RENT                8.0   \n",
+       "16028          23         100000              MORTGAGE                7.0   \n",
+       "...           ...            ...                   ...                ...   \n",
+       "32010          42          39996              MORTGAGE                2.0   \n",
+       "32047          36         250000                  RENT                2.0   \n",
+       "32172          49         120000              MORTGAGE               12.0   \n",
+       "32259          39          40000                   OWN                4.0   \n",
+       "32279          43          11340                  RENT                4.0   \n",
+       "\n",
+       "             loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "15975            VENTURE          B       6000           9.99            0   \n",
+       "15989          EDUCATION          B       8000          10.36            0   \n",
+       "15995            MEDICAL          A       4000           5.42            0   \n",
+       "16025           PERSONAL          A       3000           7.90            1   \n",
+       "16028          EDUCATION          A      15000           7.88            0   \n",
+       "...                  ...        ...        ...            ...          ...   \n",
+       "32010    HOMEIMPROVEMENT          A       2500           5.42            0   \n",
+       "32047  DEBTCONSOLIDATION          A      20000           7.88            0   \n",
+       "32172            MEDICAL          B      12000          10.99            0   \n",
+       "32259            VENTURE          B       1000          10.37            0   \n",
+       "32279          EDUCATION          C       1950            NaN            1   \n",
+       "\n",
+       "       loan_percent_income cb_person_default_on_file  \\\n",
+       "15975                 0.14                         N   \n",
+       "15989                 0.09                         N   \n",
+       "15995                 0.08                         N   \n",
+       "16025                 0.30                         N   \n",
+       "16028                 0.15                         N   \n",
+       "...                    ...                       ...   \n",
+       "32010                 0.06                         N   \n",
+       "32047                 0.08                         N   \n",
+       "32172                 0.10                         N   \n",
+       "32259                 0.03                         N   \n",
+       "32279                 0.17                         N   \n",
+       "\n",
+       "       cb_person_cred_hist_length  \n",
+       "15975                           4  \n",
+       "15989                           3  \n",
+       "15995                           4  \n",
+       "16025                           3  \n",
+       "16028                           4  \n",
+       "...                           ...  \n",
+       "32010                          12  \n",
+       "32047                          17  \n",
+       "32172                          12  \n",
+       "32259                          16  \n",
+       "32279                          11  \n",
+       "\n",
+       "[165 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d4d176",
    "metadata": {},
    "outputs": [],
    "source": []
