--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "id": "f3fd6718",
    "metadata": {},
    "outputs": [
@@ -1226,16 +1226,16 @@
       " 1   person_income               32574 non-null  int64   \n",
       " 2   person_home_ownership       32574 non-null  category\n",
       " 3   person_emp_length           31679 non-null  float64 \n",
-      " 4   loan_intent                 32574 non-null  object  \n",
-      " 5   loan_grade                  32574 non-null  object  \n",
+      " 4   loan_intent                 32574 non-null  category\n",
+      " 5   loan_grade                  32574 non-null  category\n",
       " 6   loan_amnt                   32574 non-null  int64   \n",
       " 7   loan_int_rate               29459 non-null  float64 \n",
       " 8   loan_status                 32574 non-null  int64   \n",
       " 9   loan_percent_income         32574 non-null  float64 \n",
       " 10  cb_person_default_on_file   32574 non-null  object  \n",
       " 11  cb_person_cred_hist_length  32574 non-null  int64   \n",
-      "dtypes: category(1), float64(3), int64(5), object(3)\n",
-      "memory usage: 3.0+ MB\n"
+      "dtypes: category(3), float64(3), int64(5), object(1)\n",
+      "memory usage: 2.6+ MB\n"
      ]
     }
    ],
@@ -1310,12 +1310,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "id": "c80a04ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset.astype(\n",
+    "    {\"loan_intent\": \"category\"}\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "7df1b8e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_grade\n",
+       "A    10776\n",
+       "B    10448\n",
+       "C     6456\n",
+       "D     3625\n",
+       "E      964\n",
+       "F      241\n",
+       "G       64\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.loan_grade.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d259805c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset.astype(\n",
+    "    {\"loan_grade\" : \"category\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "b4c85d0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "categorical_columns = credit_risk_dataset.select_dtypes(include=['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "12ca9b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cb_person_default_on_file\n",
+       "N    26830\n",
+       "Y     5744\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.cb_person_default_on_file.value_counts()"
    ]
   },
   {
